# test-renderer

./: .gitmodules  CMakeLists.txt  LICENSE
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: basic.fs  lighting.fs
src/: camera.cpp  camera.h  main.cpp  shaders.cpp  shaders.h  utils.cpp  utils.h
